# cora

./: .env.example  .gitignore  README.md  pyproject.toml  sample-chat.py  sample.py
src/cora/: __init__.py  phone_numbers.py
src/cora/analysis_plan/: __init__.py  pass_fail.py  structured_data.py  success_evaluation.py  summary.py
src/cora/assistants/: __init__.py
src/cora/calls/: __init__.py
src/cora/chats/: __init__.py
src/cora/transcribers/: __init__.py  deepgram.py  transcriber_profile.py
src/cora/vapi_client/: __init__.py  connector.py
src/cora/voices/: __init__.py  azure_voice.py  eleven_labs.py  openai_voice.py  utils.py  voice_profile.py
